<resources>
    <string name="app_name">APODACA TRAVEL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Apodaca Travels</string>
    <string name="nav_header_subtitle">ejimeneza@toluca.tecnm.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_altas">Altas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_listar_activos">Listar Activos</string>
    <string name="menu_listar_inactivos">Listar inactivos</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_creditos">Creditos</string>


    <string name="nuevov">Nombre del viaje</string>
    <string name="id">ID</string>
    <string name="destino_nombre">Nombre destino</string>
    <string name="fecha">Fecha de salida</string>
    <string name="precio">precio</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="destino">Destino</string>
    <string name="status">Status</string>
    <string name="imagenDestino">Imagen destino</string>
    <string name="detalles">Detalles</string>
    <string name="disponible">Lugares disponibles</string>


    <string name="limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="todo">Imagen Paciente</string>


    <string name="creditos">Datos de la aplicacion</string>
    <string name="version">Apodaca Travels</string>
    <string name="universidad">ITTOL</string>
    <string name="materia">Aplicaciones Móviles</string>
    <string name="alumno">Eduardo Jimenez Apodaca</string>
    <string name="profesora">M.C. Rocio Elizabeth Pulido Alba</string>
    <string name="app">Fragments</string>
    <string name="anio">2020</string>


</resources>