<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.modificar.Modificar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/ivFotomv"
            android:layout_width="196dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/imagenDestino"
            app:srcCompat="@drawable/ic_menu_camera" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:hint="@string/id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETIDmv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnBuscarmv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buscar"
                android:textSize="18sp" />

        </LinearLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevov">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETNombremv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/destino" />

            <Spinner
                android:id="@+id/spnDestinomv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/spnStatusmv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>



        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:hint="@string/fecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETFechamv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnCalendarioMV"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/iconfinder_calendar_1055101"
                android:contentDescription="@string/imagenDestino"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disponible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETDisponiblesmv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detalles">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETDetallesmv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLimpiarmp"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpiar"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnGuardarmv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/guardar"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>