<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.eliminar.Eliminar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/ivFotodv"
            android:layout_width="196dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imagenDestino"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_menu_camera" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:hint="@string/id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETIDdv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnBuscardv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buscar"
                android:textSize="18sp" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevov">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETNombredv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destino">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETDestinodv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETFechadv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disponible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETDisponiblesdv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detalles">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETDetallesdv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETStatusdv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCambioStatusdv"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cambio status"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btnEliminardv"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_eliminar"
                android:textSize="18sp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>